<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="6dp"
    tools:context="com.kingtvarshin.emergencyapp.MainActivity"
    android:background="#f0f0f0">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="4dp"
        android:layout_above="@+id/bottomemer">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/bt_emergencyprotocol"
                android:drawableTop="@drawable/emergencycontacts"
                android:text="@string/emergencyprotocolbt"
                android:textSize="15sp"
                android:padding="6dp"
                android:layout_margin="6dp"
                android:background="@color/bg" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/bt_importantcontact"
                android:drawableTop="@drawable/emergencycontacts"
                android:text="@string/importantcontactbt"
                android:textSize="15sp"
                android:padding="6dp"
                android:layout_margin="6dp"
                android:background="@color/bg" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/bt_medctiming"
                android:drawableTop="@drawable/medc"
                android:text="@string/medcbt"
                android:textSize="15sp"
                android:padding="6dp"
                android:layout_margin="6dp"
                android:background="@color/bg"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/bt_complainsuggestion"
                android:drawableTop="@drawable/complain"
                android:text="@string/complainbt"
                android:textSize="15sp"
                android:padding="6dp"
                android:layout_margin="6dp"
                android:background="@color/bg"
                />
        </LinearLayout>
    </ScrollView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        android:gravity="bottom"
        android:id="@+id/bottomemer"
        android:layout_alignParentBottom="true">
        <Button
            android:layout_weight=".5"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:id="@+id/bt_security"
            android:drawableTop="@drawable/security"
            android:text="@string/secembt"
            android:textSize="15sp"
            android:padding="2dp"
            android:paddingLeft="0dp"
            android:paddingRight="8dp"
            android:paddingStart="0dp"
            android:paddingEnd="8dp"
            android:layout_margin="4dp"
            android:background="@drawable/roundedbutton"
            android:layout_gravity="bottom"
            android:textColor="#ffffff"

            />
        <Button
            android:layout_weight=".5"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:id="@+id/bt_medical"
            android:drawableTop="@drawable/medical_security"
            android:text="@string/medembt"
            android:textSize="15sp"
            android:padding="2dp"
            android:paddingLeft="8dp"
            android:paddingRight="0dp"
            android:paddingStart="8dp"
            android:paddingEnd="0dp"
            android:layout_margin="4dp"
            android:background="@drawable/leftroundedbutton"
            android:layout_gravity="bottom"
            android:textColor="#ffffff"
            />

    </LinearLayout>


</RelativeLayout>
