<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_emergency_protocol"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.kingtvarshin.emergencyapp.Emergency_Protocol"
    android:gravity="center"
    android:background="#f0f0f0">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight=".5">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Medical_Protocol"
                    android:id="@+id/medical_protocol"
                    android:drawableTop="@drawable/pharmacy"
                    />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Lockdown_Protocol"
                    android:id="@+id/lockdown_protocol"
                    android:drawableTop="@drawable/lock"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:layout_width="0dp"
                android:orientation="vertical">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Violent_Protocol"
                    android:id="@+id/violent_protocol"
                    android:drawableTop="@drawable/exclamation"
                    android:layout_weight="1"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Fire_Protocol"
                    android:id="@+id/fire_protocol"
                    android:drawableTop="@drawable/fire"
                    android:layout_weight="1"/>
            </LinearLayout>
        </LinearLayout>


</RelativeLayout>
